--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Bienvenido a Hyperblog</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
@@ -22,3 +23,10 @@
         </div>
     </body>
 </html>
+
+<!-- <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head> -->
