--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Bienvenido a Hyperblog</title>
+        <title>Hyperblog: Un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
