--- a/blogpost.html
+++ b/blogpost.html
@@ -14,8 +14,8 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
-                <img id="foto" src="https://imgur.com/gallery/fkO6AY8">
-                <blockquote class="imgur-embed-pub" lang="en" data-id="a/fkO6AY8"  ><a href="//imgur.com/a/fkO6AY8">Working on a steampunk dog (Bull Mastiff)</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+                <blockquote class="imgur-embed-pub" lang="en" data-id="a/fkO6AY8"  ><a href="//imgur.com/a/fkO6AY8">Working on a steampunk dog (Bull Mastiff)</a></blockquote>
+                <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
